@@ -1,3 +1,7 @@
+2010-10-08  Andreas Schwab  <schwab@linux-m68k.org>
+
+	* net/browse-url.el (browse-url-xdg-open): Remove use of /bin/sh.
+
 2010-10-08  Glenn Morris  <rgm@gnu.org>
 
 	* emacs-lisp/cl-compat.el, emacs-lisp/lmenu.el: Move to obsolete/.
